More spacing fixes

--- a/Timer Page/style_a.css
+++ b/Timer Page/style_a.css
@@ -51,10 +51,11 @@ input {
 .switch-field {
     font-family: "Roboto", Tahoma, Verdana, sans-serif;
     font-size: 2vw;
+    color: #E3D985;
     font-weight: bold;
     text-align: center;
     overflow: hidden;
-    width: 50%;
+    width: 49%;
     margin: auto;
 }
 
@@ -84,7 +85,7 @@ input {
     font-family: 'Roboto', sans-serif;
   font-weight: bold;
     font-size: 2.1vw;
-  text-align: center;
+   text-align: center;
   text-shadow: none;
   padding: 6px 14px;
   border: 1px solid rgba(0, 0, 0, 0.2);
