--- a/Timer Page/style_w.css
+++ b/Timer Page/style_w.css
@@ -6,7 +6,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
 }
 .defaultCountdown {
     width: 100%;
-    height: 12vw;
+    height: 17vw;
     margin-bottom: 5vw;
    
 }
@@ -35,7 +35,7 @@ button {
     border-radius: 4px;
     font-family: 'Roboto', sans-serif;
     font-size: 2.5vw;
-    width: 50%;
+    width: 49%;
     float: right;
         
 }
@@ -171,7 +171,7 @@ input {
 	text-align: center;
 }
 .countdown-amount {
-    font-size: 7vw;
+    font-size: 10vw;
     font-family: 'Oswald', sans-serif;
     font-weight: 900;
     
